# Edge-viewer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gauransh/edge_viewer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/gauransh/edge_viewer/: CVProcessor.kt  CameraService.kt  MainActivity.kt  MainRendered.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gauransh/edge_viewer/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  tsconfig.json
web/src/: main.ts
